{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 155,
  "lineage": "70bdd94e-3d7c-edef-11a5-8eecb053ecbc",
  "resources": [
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:896758399486:internet-gateway/igw-035df54bb93b4788e",
            "id": "igw-035df54bb93b4788e",
            "owner_id": "896758399486",
            "vpc_id": "vpc-0b5a1350cd31b527d"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:896758399486:route-table/rtb-0ae8b4f4d85d7919a",
            "id": "rtb-0ae8b4f4d85d7919a",
            "owner_id": "896758399486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035df54bb93b4788e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0b5a1350cd31b527d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b1cadc81390a259",
            "route_table_id": "rtb-0ae8b4f4d85d7919a",
            "subnet_id": "subnet-0792da246b4c4cd4f"
          },
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_route_table.pubrt",
            "module.clustering.aws_subnet.pubsub01",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f14dc3c715fb9b",
            "route_table_id": "rtb-0ae8b4f4d85d7919a",
            "subnet_id": "subnet-0df8d6cd35c4ab3f7"
          },
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_route_table.pubrt",
            "module.clustering.aws_subnet.pubsub02",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:896758399486:security-group/sg-04955dcece2ebf605",
            "description": "This is to allow server to outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04955dcece2ebf605",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devsgforkube",
            "name_prefix": "",
            "owner_id": "896758399486",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5a1350cd31b527d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:896758399486:subnet/subnet-0792da246b4c4cd4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.0.0/18",
            "id": "subnet-0792da246b4c4cd4f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "896758399486",
            "tags": {
              "Name": "dev-pubsub01"
            },
            "tags_all": {
              "Name": "dev-pubsub01"
            },
            "vpc_id": "vpc-0b5a1350cd31b527d"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:896758399486:subnet/subnet-0df8d6cd35c4ab3f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.64.0/18",
            "id": "subnet-0df8d6cd35c4ab3f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "896758399486",
            "tags": {
              "Name": "dev-pubsub02"
            },
            "tags_all": {
              "Name": "dev-pubsub02"
            },
            "vpc_id": "vpc-0b5a1350cd31b527d"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:896758399486:vpc/vpc-0b5a1350cd31b527d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0497bd660d1e71b25",
            "default_route_table_id": "rtb-08320044ab2ebb1eb",
            "default_security_group_id": "sg-0aaeec1011ac9423a",
            "dhcp_options_id": "dopt-08e2551da58ced598",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b5a1350cd31b527d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08320044ab2ebb1eb",
            "owner_id": "896758399486",
            "tags": {
              "Name": "dev-eks-vpc"
            },
            "tags_all": {
              "Name": "dev-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}